plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '1.13.2'
    id 'com.github.spotbugs' version '5.0.14' // Add SpotBugs plugin
}

apply plugin: 'org.jetbrains.intellij'
apply plugin: 'idea'
apply plugin: 'java'

group 'fish.payara.micro.intellij'
version '2.1.0'

sourceCompatibility = "17"
targetCompatibility = "17"

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        url "https://nexus.dev.payara.fish/repository/payara-artifacts/"
    }
}

dependencies {
    implementation 'fish.payara.tools:payara-cloud:1.0-Alpha4'
    implementation 'fish.payara.cloud:cloud-api:1.0.1'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.9.1'
}

// SpotBugs Configuration
spotbugs {
    toolVersion = '4.2.3'  // Set the SpotBugs version
    effort = 'max'          // Maximum analysis effort
    reportLevel = 'low'     // Report all issues
    ignoreFailures = true  // Fail the build on SpotBugs violations (set to true if you want the build to continue)
}

tasks.withType(com.github.spotbugs.snom.SpotBugsTask) {
    reports {
        xml.enabled = true    // Enable XML report
        html.enabled = false   // Enable HTML report
    }
}

runIde {
    jvmArgs = [
        '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED',
        '-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005'
    ]
}

intellij {
    version = '251.26094.121'
    type = 'IC'
    pluginName = 'Payara IntelliJ Community Tools'
    plugins = ['java', 'maven', 'maven-model', 'gradle', 'terminal']
}

patchPluginXml {
    sinceBuild = "251.17181"
}

publishPlugin {
    token = System.getProperty("fish.payara.micro.intellij.publish.token")
}
